Add menu and game name to header

--- a/index.html
+++ b/index.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="assets/css/style.css">
+    <title>Rock Paper Scissors</title>
 </head>
 <body>
-    
+    <header class="container">
+        <nav>
+          <span>ROCK	<br>PAPER	<br>SCISSORS	<br></span>
+          <button type="button">Game</button>
+          <button type="button">Restart</button>
+          <button type="button">How to play</button>
+          <button type="button">About</button>
+        </nav>
+    </header>
+    <script src="assets/js/script.js"></script> 
 </body>
 </html>
