add styling to game title

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header class="container">
         <nav>
-          <span>ROCK	<br>PAPER	<br>SCISSORS	<br></span>
+          <span class="game-name">ROCK	<br>PAPER	<br>SCISSORS	<br></span>
           <button type="button">Game</button>
           <button type="button">Restart</button>
           <button type="button">How to play</button>
