add class and styling to buttons

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <header class="container">
         <nav>
           <span class="game-name">ROCK	<br>PAPER	<br>SCISSORS	<br></span>
-          <button type="button">Game</button>
-          <button type="button">Restart</button>
-          <button type="button">How to play</button>
-          <button type="button">About</button>
+          <button type="button" class="button">Game</button>
+          <button type="button" class="button">Restart</button>
+          <button type="button" class="button">How to play</button>
+          <button type="button" class="button">About</button>
         </nav>
     </header>
     <script src="assets/js/script.js"></script> 
