--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<!-- Start of Head -->
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +8,10 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Rock Paper Scissors</title>
 </head>
+<!-- End of Head-->
+<!-- Start of Body -->
 <body>
+    <!-- Top Menu -->
     <header class="container">
         <nav>
           <span class="game-name">ROCK	<br>PAPER	<br>SCISSORS	<br></span>
@@ -17,6 +21,13 @@
           <button type="button" class="button">About</button>
         </nav>
     </header>
+    <!-- End of Top Menu -->
+    <div class="container">
+        <div class="scores">
+            <h3 style="padding-right: 10px; float: left;">Your Score: 0</h3>
+            <h3 style="float: right;">Computer Score: 0</h3>
+         </div>
+    </div>
     <script src="assets/js/script.js"></script> 
 </body>
 </html>
