make div and 5 buttons for the main game section

--- a/index.html
+++ b/index.html
@@ -28,6 +28,14 @@
             <h3 style="float: right;">Computer Score: 0</h3>
          </div>
     </div>
+    <!-- Game Buttons Div-->
+    <div>
+        <button id="rock" aria-label="Rock">ROCK</button>
+        <button id="paper" aria-label="Paper">PAPER</button>
+        <button id="scissors" aria-label="Scissors">SCISSORS</button>
+        <button id="lizard" aria-label="Lizard">LIZARD</button>
+        <button id="spock" aria-label="Spock">SPOCK</button>
+    </div>
     <script src="assets/js/script.js"></script> 
 </body>
 </html>
