add font awesome script and icons for game buttons

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/67320d372b.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Rock Paper Scissors</title>
 </head>
@@ -30,11 +31,11 @@
     </div>
     <!-- Game Buttons Div-->
     <div>
-        <button id="rock" aria-label="Rock">ROCK</button>
-        <button id="paper" aria-label="Paper">PAPER</button>
-        <button id="scissors" aria-label="Scissors">SCISSORS</button>
-        <button id="lizard" aria-label="Lizard">LIZARD</button>
-        <button id="spock" aria-label="Spock">SPOCK</button>
+        <button id="rock" aria-label="Rock"><i class="far fa-hand-rock"><br>ROCK</i></button>
+        <button id="paper" aria-label="Paper"><i class="far fa-hand-paper"><br>PAPER</i></button>
+        <button id="scissors" aria-label="Scissors"><i class="far fa-hand-scissors"><br>SCISSORS</i></button>
+        <button id="lizard" aria-label="Lizard"><i class="far fa-hand-lizard"><br>LIZARD</i></button>
+        <button id="spock" aria-label="Spock"><i class="far fa-hand-spock"><br>SPOCK</i></button>
     </div>
     <script src="assets/js/script.js"></script> 
 </body>
