add class to div called game, add styling to buttons

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
          </div>
     </div>
     <!-- Game Buttons Div-->
-    <div>
+    <div class="game">
         <button id="rock" aria-label="Rock"><i class="far fa-hand-rock"><br>ROCK</i></button>
         <button id="paper" aria-label="Paper"><i class="far fa-hand-paper"><br>PAPER</i></button>
         <button id="scissors" aria-label="Scissors"><i class="far fa-hand-scissors"><br>SCISSORS</i></button>
