--- a/index.html
+++ b/index.html
@@ -24,18 +24,19 @@
     </header>
     <!-- End of Top Menu -->
     <div class="container">
+        <!-- Score Div-->
         <div class="scores">
             <h3 style="padding-right: 10px; float: left;">Your Score: 0</h3>
             <h3 style="float: right;">Computer Score: 0</h3>
          </div>
-    </div>
-    <!-- Game Buttons Div-->
-    <div class="game">
-        <button id="rock" aria-label="Rock"><i class="far fa-hand-rock"><br>ROCK</i></button>
-        <button id="paper" aria-label="Paper"><i class="far fa-hand-paper"><br>PAPER</i></button>
-        <button id="scissors" aria-label="Scissors"><i class="far fa-hand-scissors"><br>SCISSORS</i></button>
-        <button id="lizard" aria-label="Lizard"><i class="far fa-hand-lizard"><br>LIZARD</i></button>
-        <button id="spock" aria-label="Spock"><i class="far fa-hand-spock"><br>SPOCK</i></button>
+        <!-- Game Buttons Div-->
+         <div class="game">
+            <button id="rock" aria-label="Rock"><i class="far fa-hand-rock"><br>ROCK</i></button>
+            <button id="paper" aria-label="Paper"><i class="far fa-hand-paper"><br>PAPER</i></button>
+            <button id="scissors" aria-label="Scissors"><i class="far fa-hand-scissors"><br>SCISSORS</i></button>
+            <button id="lizard" aria-label="Lizard"><i class="far fa-hand-lizard"><br>LIZARD</i></button>
+            <button id="spock" aria-label="Spock"><i class="far fa-hand-spock"><br>SPOCK</i></button>
+        </div>
     </div>
     <script src="assets/js/script.js"></script> 
 </body>
