--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
          </div>
         <!-- Game Buttons Div-->
          <div class="game">
-            <button id="rock" aria-label="Rock"><i class="far fa-hand-rock"><br>ROCK</i></button>
-            <button id="paper" aria-label="Paper"><i class="far fa-hand-paper"><br>PAPER</i></button>
-            <button id="scissors" aria-label="Scissors"><i class="far fa-hand-scissors"><br>SCISSORS</i></button>
-            <button id="lizard" aria-label="Lizard"><i class="far fa-hand-lizard"><br>LIZARD</i></button>
-            <button id="spock" aria-label="Spock"><i class="far fa-hand-spock"><br>SPOCK</i></button>
+            <button id="rock" aria-label="Rock" class="game-options"><i class="far fa-hand-rock"><br>ROCK</i></button>
+            <button id="paper" aria-label="Paper" class="game-options"><i class="far fa-hand-paper"><br>PAPER</i></button>
+            <button id="scissors" aria-label="Scissors" class="game-options"><i class="far fa-hand-scissors"><br>SCISSORS</i></button>
+            <button id="lizard" aria-label="Lizard" class="game-options"><i class="far fa-hand-lizard"><br>LIZARD</i></button>
+            <button id="spock" aria-label="Spock" class="game-options"><i class="far fa-hand-spock"><br>SPOCK</i></button>
         </div>
     </div>
     <script src="assets/js/script.js"></script> 
