add results div where all results will be shown generated by javscript

--- a/index.html
+++ b/index.html
@@ -28,14 +28,19 @@
         <div class="scores">
             <h3 style="padding-right: 10px; float: left;">Your Score: 0</h3>
             <h3 style="float: right;">Computer Score: 0</h3>
-         </div>
+        </div>
         <!-- Game Buttons Div-->
-         <div class="game">
+        <div class="game">
             <button id="rock" aria-label="Rock" class="game-options"><i class="far fa-hand-rock"><br>ROCK</i></button>
             <button id="paper" aria-label="Paper" class="game-options"><i class="far fa-hand-paper"><br>PAPER</i></button>
             <button id="scissors" aria-label="Scissors" class="game-options"><i class="far fa-hand-scissors"><br>SCISSORS</i></button>
             <button id="lizard" aria-label="Lizard" class="game-options"><i class="far fa-hand-lizard"><br>LIZARD</i></button>
             <button id="spock" aria-label="Spock" class="game-options"><i class="far fa-hand-spock"><br>SPOCK</i></button>
+        </div>
+        <!-- Result Message Div-->
+        <div>
+            <p id="message"></p>
+            <p id="result"></p>
         </div>
     </div>
     <script src="assets/js/script.js"></script> 
