add span ids within score div to let the startGame function make changes to them

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     <div class="container">
         <!-- Score Div-->
         <div class="scores">
-            <h3 style="padding-right: 10px; float: left;">Your Score: 0</h3>
-            <h3 style="float: right;">Computer Score: 0</h3>
+            <h3 style="padding-right: 10px; float: left;">Your Score: <span id="user-score">0</span></h3>
+            <h3 style="float: right;">Computer Score: <span id="computer-score">0</span></h3>
         </div>
         <!-- Game Buttons Div-->
         <div class="game">
