add class to results div and apply styling

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <button id="spock" aria-label="Spock" class="game-options" data-game-choice="4" data-type="selection"><i class="far fa-hand-spock"><br>SPOCK</i></button>
         </div>
         <!-- Result Message Div-->
-        <div>
+        <div class="results">
             <p id="message"></p>
             <p id="result"></p>
         </div>
