Linked game button to modal and add basic css

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header class="container">
         <nav>
           <span class="game-name">ROCK	<br>PAPER	<br>SCISSORS	<br></span>
-          <button type="button" class="button" data-href="#game-modal">Game</button>
+          <button type="button" class="button modal-button" data-href="#modal-game">Game</button>
           <button type="button" class="button">Restart</button>
           <button type="button" class="button">How to play</button>
           <button type="button" class="button">About</button>
