Add title and two difficulty buttons within first modal 'game' in index.html

--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
 		<!-- Game Difficulty Modal -->
 		<div class="modal-content">
 		    <span class="modal-close">&times;</span>
+            <h1>Game Types:</h1>
+            <button type="button" id="btn-easy" class="button" data-difficulty="1">EASY</button>
+            <button type="button" id="btn-hard" class="button" data-difficulty="2">HARD</button>
 		</div>
 	</div>
     <script src="assets/js/script.js"></script> 
