Add id to restart button in index.html and else if within button listener to listen for restart button

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <nav>
           <span class="game-name">ROCK	<br>PAPER	<br>SCISSORS	<br></span>
           <button type="button" class="button modal-button" data-href="#modal-game">Game</button>
-          <button type="button" class="button">Restart</button>
+          <button type="button" class="button" id="restart-game">Restart</button>
           <button type="button" class="button">How to play</button>
           <button type="button" class="button">About</button>
         </nav>
