Add H1 within game div asking user to choose one of the difficulty options

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         </div>
         <!-- Game Buttons Div-->
         <div class="game">
+            <h1>PLEASE SELECT YOUR GAME DIFFICULTY WITHIN GAME SETTINGS</h1>
             <button id="rock" aria-label="Rock" class="game-options" data-game-choice="0" data-type="selection"><i class="far fa-hand-rock"><br>ROCK</i></button>
             <button id="paper" aria-label="Paper" class="game-options" data-game-choice="1" data-type="selection"><i class="far fa-hand-paper"><br>PAPER</i></button>
             <button id="scissors" aria-label="Scissors" class="game-options" data-game-choice="2" data-type="selection"><i class="far fa-hand-scissors"><br>SCISSORS</i></button>
