Add content to about modal in index.html

--- a/index.html
+++ b/index.html
@@ -60,6 +60,17 @@
             <button type="button" id="btn-hard" class="button" data-difficulty="2">HARD</button>
 		</div>
 	</div>
+    <!-- About Modal -->
+	<div id="about" class="modal">
+		<div class="modal-content">
+		    <span class="modal-close">&times;</span>
+            <p>Rock, Paper, Scissors, Lizard, Spock is a game of chance that expands. It is first used to settle a dispute about what to watch on TV between Sheldon and Raj in "The Lizard-Spock Expansion".</p>
+		    <br>
+            <p>You have options to play the classic or expansion version of the game.</p>
+		    <br>
+		    <p>Have a great time!</p>
+		</div>
+	</div>
     <script src="assets/js/script.js"></script> 
 </body>
 </html>
