Add class and data href to about button in nav

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <button type="button" class="button modal-button" data-href="#modal-game">Game</button>
           <button type="button" class="button" id="restart-game">Restart</button>
           <button type="button" class="button">How to play</button>
-          <button type="button" class="button">About</button>
+          <button type="button" class="button modal-button" data-href="#about">About</button>
         </nav>
     </header>
     <!-- End of Top Menu -->
