Add div that will contain guide under the main game container. Add easy game guide

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         </nav>
     </header>
     <!-- End of Top Menu -->
+    <!-- Start of Game Container-->
     <div class="container">
         <!-- Score Div-->
         <div class="scores">
@@ -44,7 +45,17 @@
             <p id="result"></p>
         </div>
     </div>
-    
+    <!-- End of Game Container -->
+    <!-- Start of Guides Container-->
+    <div class="guides">
+		<div class="easy-guide">
+			 <h1>Easy Game Guide:</h1>
+			 <p>Scissors cuts Paper</p>
+			 <p>Paper covers Rock</p>
+			 <p>Rock crushes Scissors</p>
+	    </div>
+    </div>
+    <!-- End of Guides Container -->
     <!--
     Modal script to make pop up windows
     https://stackoverflow.com/questions/40645032/creating-multiple-modals-on-a-single-page
