Add content to hard guide div

--- a/index.html
+++ b/index.html
@@ -49,11 +49,24 @@
     <!-- Start of Guides Container-->
     <div class="guides">
 		<div class="easy-guide">
-			 <h1>Easy Game Guide:</h1>
-			 <p>Scissors cuts Paper</p>
-			 <p>Paper covers Rock</p>
-			 <p>Rock crushes Scissors</p>
+			<h1>Easy Game Guide:</h1>
+			<p>Scissors cuts Paper</p>
+			<p>Paper covers Rock</p>
+			<p>Rock crushes Scissors</p>
 	    </div>
+        <div class="hard-guide">
+            <h1>Hard Game Guide:</h1>
+            <p>Scissors cuts Paper</p>
+            <p>Paper covers Rock</p>
+            <p>Rock crushes Lizard</p>
+            <p>Lizard poisons Spock</p>
+            <p>Spock smashes Scissors</p>
+            <p>Scissors decapitates Lizard</p>
+            <p>Lizard eats Paper</p>
+            <p>Paper disproves Spock</p>
+            <p>Spock vaporizes Rock</p>
+            <p>Rock crushes Scissors</p>
+        </div>
     </div>
     <!-- End of Guides Container -->
     <!--
