Add images folder and upload two images for easy and hard guide. Add them within correct divs

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 			<p>Scissors cuts Paper</p>
 			<p>Paper covers Rock</p>
 			<p>Rock crushes Scissors</p>
+            <p><img src="assets/images/easy-guide.svg" alt="Image that shows what wins against what for easy difficulty"></p>
 	    </div>
         <div class="hard-guide">
             <h1>Hard Game Guide:</h1>
@@ -66,6 +67,7 @@
             <p>Paper disproves Spock</p>
             <p>Spock vaporizes Rock</p>
             <p>Rock crushes Scissors</p>
+            <p><img src="assets/images/hard-guide.svg" alt="Image that shows what wins against what for hard difficulty"></p>
         </div>
     </div>
     <!-- End of Guides Container -->
