Add content to how to play modal.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <span class="game-name">ROCK	<br>PAPER	<br>SCISSORS	<br></span>
           <button type="button" class="button modal-button" data-href="#modal-game">Game</button>
           <button type="button" class="button" id="restart-game">Restart</button>
-          <button type="button" class="button">How to play</button>
+          <button type="button" class="button modal-button" data-href="#how-to-play">How to play</button>
           <button type="button" class="button modal-button" data-href="#about">About</button>
         </nav>
     </header>
@@ -97,6 +97,19 @@
 		    <p>Have a great time!</p>
 		</div>
 	</div>
+    <!-- How to Play Modal -->
+	<div id="how-to-play" class="modal">
+		<div class="modal-content">
+		    <span class="modal-close">&times;</span>
+		    <h1>Game Rules:</h1>
+            <p>1) Make A Choice From Given Options Depending On The Difficulty You Have Chosen.</p>
+            <p>2) Follow The Guide Under The Game Window To Understand What Options Beats Another.</p>
+            <p>3) Whoever Scores 5 Points First WINS.</p>
+		    <br>
+		    <p>GOOD LUCK</p>
+		</div>
+	</div>
+    <!-- End of Modals -->
     <script src="assets/js/script.js"></script> 
 </body>
 </html>
