--- a/index.html
+++ b/index.html
@@ -80,16 +80,16 @@
 	<div id="modal-game" class="modal">
 		<!-- Game Difficulty Modal -->
 		<div class="modal-content">
-		    <span class="modal-close">&times;</span>
+		    <span class="modal-exit">&times;</span>
             <h1>Game Types:</h1>
-            <button type="button" id="btn-easy" class="button" data-difficulty="1">EASY</button>
-            <button type="button" id="btn-hard" class="button" data-difficulty="2">HARD</button>
+            <button type="button" id="btn-easy" class="button modal-close" data-difficulty="1">EASY</button>
+            <button type="button" id="btn-hard" class="button modal-close" data-difficulty="2">HARD</button>
 		</div>
 	</div>
     <!-- About Modal -->
 	<div id="about" class="modal">
 		<div class="modal-content">
-		    <span class="modal-close">&times;</span>
+		    <span class="modal-exit">&times;</span>
             <p>Rock, Paper, Scissors, Lizard, Spock is a game of chance that expands. It is first used to settle a dispute about what to watch on TV between Sheldon and Raj in "The Lizard-Spock Expansion".</p>
 		    <br>
             <p>You have options to play the classic or expansion version of the game.</p>
@@ -100,7 +100,7 @@
     <!-- How to Play Modal -->
 	<div id="how-to-play" class="modal">
 		<div class="modal-content">
-		    <span class="modal-close">&times;</span>
+		    <span class="modal-exit">&times;</span>
 		    <h1>Game Rules:</h1>
             <p>1) Make A Choice From Given Options Depending On The Difficulty You Have Chosen.</p>
             <p>2) Follow The Guide Under The Game Window To Understand What Options Beats Another.</p>
