Add onclick to each of the game buttons calling the playSound function

--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
         <!-- Game Buttons Div-->
         <div class="game">
             <h1 id="game-type">PLEASE SELECT YOUR GAME DIFFICULTY WITHIN GAME SETTINGS</h1>
-            <button id="rock" aria-label="Rock" class="game-options" data-game-choice="0" data-type="selection"><i class="far fa-hand-rock"><br>ROCK</i></button>
-            <button id="paper" aria-label="Paper" class="game-options" data-game-choice="1" data-type="selection"><i class="far fa-hand-paper"><br>PAPER</i></button>
-            <button id="scissors" aria-label="Scissors" class="game-options" data-game-choice="2" data-type="selection"><i class="far fa-hand-scissors"><br>SCISSORS</i></button>
-            <button id="lizard" aria-label="Lizard" class="game-options" data-game-choice="3" data-type="selection"><i class="far fa-hand-lizard"><br>LIZARD</i></button>
-            <button id="spock" aria-label="Spock" class="game-options" data-game-choice="4" data-type="selection"><i class="far fa-hand-spock"><br>SPOCK</i></button>
+            <button id="rock" aria-label="Rock" class="game-options" data-game-choice="0" data-type="selection" onclick="playSound('assets/sounds/rock.mp3')"><i class="far fa-hand-rock"><br>ROCK</i></button>
+            <button id="paper" aria-label="Paper" class="game-options" data-game-choice="1" data-type="selection" onclick="playSound('assets/sounds/paper.mp3')"><i class="far fa-hand-paper"><br>PAPER</i></button>
+            <button id="scissors" aria-label="Scissors" class="game-options" data-game-choice="2" data-type="selection" onclick="playSound('assets/sounds/scissors.mp3')"><i class="far fa-hand-scissors"><br>SCISSORS</i></button>
+            <button id="lizard" aria-label="Lizard" class="game-options" data-game-choice="3" data-type="selection" onclick="playSound('assets/sounds/lizard.mp3')"><i class="far fa-hand-lizard"><br>LIZARD</i></button>
+            <button id="spock" aria-label="Spock" class="game-options" data-game-choice="4" data-type="selection" onclick="playSound('assets/sounds/spock.mp3')"><i class="far fa-hand-spock"><br>SPOCK</i></button>
         </div>
         <!-- Result Message Div-->
         <div class="results">
