--- a/index.html
+++ b/index.html
@@ -84,6 +84,8 @@
             <h1>Game Types:</h1>
             <button type="button" id="btn-easy" class="button modal-close" data-difficulty="1">EASY</button>
             <button type="button" id="btn-hard" class="button modal-close" data-difficulty="2">HARD</button>
+            <h1>Volume Slider:</h1>
+            <input type=range min=0 max=100 value=50 id=fader step=1>
 		</div>
 	</div>
     <!-- About Modal -->
