--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
     <!-- Start of Guides Container-->
     <div class="guides">
 		<div class="easy-guide">
-			<h1>Easy Game Guide:</h1>
-			<p>Scissors cuts Paper</p>
-			<p>Paper covers Rock</p>
-			<p>Rock crushes Scissors</p>
-            <p><img src="assets/images/easy-guide.svg" alt="Image that shows what wins against what for easy difficulty"></p>
+			<h1 class="animate__animated animate__backInDown">Easy Game Guide:</h1>
+			<p class="animate__animated animate__backInLeft">Scissors cuts Paper</p>
+			<p class="animate__animated animate__backInRight">Paper covers Rock</p>
+			<p class="animate__animated animate__backInLeft">Rock crushes Scissors</p>
+            <p><img src="assets/images/easy-guide.svg" alt="Image that shows what wins against what for easy difficulty" class="animate__animated animate__backInUp"></p>
 	    </div>
         <div class="hard-guide">
             <h1>Hard Game Guide:</h1>
