Add animations to hard guide in index.html

--- a/index.html
+++ b/index.html
@@ -57,18 +57,18 @@
             <p><img src="assets/images/easy-guide.svg" alt="Image that shows what wins against what for easy difficulty" class="animate__animated animate__backInUp"></p>
 	    </div>
         <div class="hard-guide">
-            <h1>Hard Game Guide:</h1>
-            <p>Scissors cuts Paper</p>
-            <p>Paper covers Rock</p>
-            <p>Rock crushes Lizard</p>
-            <p>Lizard poisons Spock</p>
-            <p>Spock smashes Scissors</p>
-            <p>Scissors decapitates Lizard</p>
-            <p>Lizard eats Paper</p>
-            <p>Paper disproves Spock</p>
-            <p>Spock vaporizes Rock</p>
-            <p>Rock crushes Scissors</p>
-            <p><img src="assets/images/hard-guide.svg" alt="Image that shows what wins against what for hard difficulty"></p>
+            <h1 class="animate__animated animate__backInDown">Hard Game Guide:</h1>
+            <p class="animate__animated animate__backInLeft">Scissors cuts Paper</p>
+            <p class="animate__animated animate__backInRight">Paper covers Rock</p>
+            <p class="animate__animated animate__backInLeft">Rock crushes Lizard</p>
+            <p class="animate__animated animate__backInRight">Lizard poisons Spock</p>
+            <p class="animate__animated animate__backInLeft">Spock smashes Scissors</p>
+            <p class="animate__animated animate__backInRight">Scissors decapitates Lizard</p>
+            <p class="animate__animated animate__backInLeft">Lizard eats Paper</p>
+            <p class="animate__animated animate__backInRight">Paper disproves Spock</p>
+            <p class="animate__animated animate__backInLeft">Spock vaporizes Rock</p>
+            <p class="animate__animated animate__backInUp">Rock crushes Scissors</p>
+            <p><img src="assets/images/hard-guide.svg" alt="Image that shows what wins against what for hard difficulty" class="animate__animated animate__backInUp"></p>
         </div>
     </div>
     <!-- End of Guides Container -->
