Remove media query and change the look of game name across all devices

--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
     <!-- Top Menu -->
     <header class="container">
         <nav>
-          <span class="game-name">ROCK	<br>PAPER	<br>SCISSORS	<br></span>
-          <button type="button" class="button modal-button" data-href="#modal-game">Game</button>
-          <button type="button" class="button" id="restart-game">Restart</button>
-          <button type="button" class="button modal-button" data-href="#how-to-play">How to play</button>
-          <button type="button" class="button modal-button" data-href="#about">About</button>
+            <span class="game-name">ROCK PAPER SCISSORS LIZARD SPOCK</span>
+            <div>
+                <button type="button" class="button modal-button" data-href="#modal-game">Game</button>
+                <button type="button" class="button" id="restart-game">Restart</button>
+                <button type="button" class="button modal-button" data-href="#how-to-play">How to play</button>
+                <button type="button" class="button modal-button" data-href="#about">About</button>
+            </div>
         </nav>
     </header>
     <!-- End of Top Menu -->
