Add text align to nav buttons and game type H1.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="container">
         <nav>
             <span class="game-name">ROCK PAPER SCISSORS LIZARD SPOCK</span>
-            <div>
+            <div style="text-align: center;">
                 <button type="button" class="button modal-button" data-href="#modal-game">Game</button>
                 <button type="button" class="button" id="restart-game">Restart</button>
                 <button type="button" class="button modal-button" data-href="#how-to-play">How to play</button>
