Change the default sound volume

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
         <!-- Game Buttons Div-->
         <div class="game">
-            <h1 id="game-type">PLEASE SELECT YOUR GAME DIFFICULTY WITHIN GAME SETTINGS</h1>
+            <h1 id="game-type">Please select your game difficulty within game settings.</h1>
             <button id="rock" aria-label="Rock" class="animate__animated animate__backInLeft game-options" data-game-choice="0" data-type="selection" onclick="playSound('assets/sounds/rock.mp3')"><i class="far fa-hand-rock"><br>ROCK</i></button>
             <button id="paper" aria-label="Paper" class="animate__animated animate__backInDown game-options" data-game-choice="1" data-type="selection" onclick="playSound('assets/sounds/paper.mp3')"><i class="far fa-hand-paper"><br>PAPER</i></button>
             <button id="scissors" aria-label="Scissors" class="animate__animated animate__backInRight game-options" data-game-choice="2" data-type="selection" onclick="playSound('assets/sounds/scissors.mp3')"><i class="far fa-hand-scissors"><br>SCISSORS</i></button>
@@ -88,7 +88,7 @@
             <button type="button" id="btn-easy" class="button modal-close" data-difficulty="1">EASY</button>
             <button type="button" id="btn-hard" class="button modal-close" data-difficulty="2">HARD</button>
             <h1>Volume Slider:</h1>
-            <input type=range min=0 max=100 value=50 id=fader step=1>
+            <input type=range min=0 max=100 value=30 id=fader step=1>
 		</div>
 	</div>
     <!-- About Modal -->
