--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <title>Rock Paper Scissors</title>
+    <link rel="shortcut icon" type="image/jpg" href="assets/images/hard-guide.svg"/>
 </head>
 <!-- End of Head-->
 <!-- Start of Body -->
