--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://kit.fontawesome.com/67320d372b.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-    <title>Rock Paper Scissors</title>
+    <title>Rock Paper Scissors Lizard Spock - Game</title>
     <link rel="shortcut icon" type="image/jpg" href="assets/images/hard-guide.svg"/>
 </head>
 <!-- End of Head-->
