Add defer to script load in index.html

--- a/index.html
+++ b/index.html
@@ -117,6 +117,6 @@
 		</div>
 	</div>
     <!-- End of Modals -->
-    <script src="assets/js/script.js"></script> 
+    <script src="assets/js/script.js" defer></script> 
 </body>
 </html>
