Fix issue where pressing the game difficulties did not automatically close the modal.

--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
 		<div class="modal-content">
 		    <span class="modal-exit">&times;</span>
             <h1>Game Types:</h1>
-            <button type="button" id="btn-easy" class="button modal-close" data-difficulty="1">EASY</button>
-            <button type="button" id="btn-hard" class="button modal-close" data-difficulty="2">HARD</button>
+            <button type="button" id="btn-easy" class="button game-close" data-difficulty="1">EASY</button>
+            <button type="button" id="btn-hard" class="button game-close" data-difficulty="2">HARD</button>
             <h1>Volume Slider:</h1>
             <input type=range min=0 max=100 value=30 id=fader step=1>
 		</div>
